Fix bug #26892, ORA-21301 in ocinewcollection() call. 				pEnv should be initialized in object mode too.